resolved alignment issues

--- a/src/common/components/footer/footer.module.css
+++ b/src/common/components/footer/footer.module.css
@@ -1,9 +1,8 @@
-footer {
+.footer {
   height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
   border-top: 1px solid var(--color-border-dark);
-  padding: 20px;
   font-size: 0.875rem;
 }
